# fastapi-boostrap

./: .dockerignore  .env-example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  cmd.sh  docker-compose.yml  gunicorn_conf.py  pyproject.toml
app/: config.py  main.py  models.py  static_values.py
app/routers/auth/: auth.py  models.py
app/routers/todos/: enums.py  models.py  todos.py
app/routers/todos/tests/: test_todos.py
app/routers/utils/: utils.py
app/routers/utils/tests/: test_utils.py
app/utilities/: db.py  logger.py  middlewares.py
k8s/: deployment.yaml  service.yaml
mongo/: mongo-init.js
